tests/error/ev.gw
#! [contains] NullPtrException
ref Event e;
e => now;
